# MatrixLib

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CommonTypes.h  Doxyfile  MatrixCls.h  MatrixPkg.h  README.md  SubMatPtrCls.h  TEMPLATE_APPROACH_ANALYSIS.md  TEMPLATE_DOCUMENTATION_FIX.md  VectorCls.h  app.cpp  generate_sphinx_docs.sh  requirements.txt
docs/: PROJECT_STRUCTURE.md  README.md  README_DOXYGEN.md  README_SPHINX.md  TEMPLATE_DOCUMENTATION_SOLUTION.md
docs/sphinx/: classes.rst  conf.py  examples.rst  files.rst  index.rst
examples/: README_forward_substitution.md  app.cpp  asd  example.cpp  forward_substitution_example.cpp  runtime_subvector_example.cpp  submatrix_example.cpp  test_asd.cpp  user_example.cpp
include/: MatrixCls.h  MatrixPkg.h  SubMatPtrCls.h  SubVecPtrCls.h  VectorCls.h  matrix.hpp
include/matrixlib/: CommonTypes.h  MatrixCls.h  MatrixPkg.h  SubMatPtrCls.h  VectorCls.h
scripts/: generate_docs.sh
tests/: CMakeLists.txt  test_VectorCls.cpp  test_matrix.cpp
